--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
+    "vue-sessionstorage": "^1.0.0",
     "vuetify": "^3.5.14"
   },
   "devDependencies": {
