--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue-sessionstorage": "^1.0.0",
-    "vuetify": "^3.5.14"
+    "vuetify": "^3.5.14",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
