--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdi/js": "^7.4.47",
     "axios": "^1.6.8",
     "pinia": "^2.1.7",
+    "tailwindcss": "^3.4.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue-sessionstorage": "^1.0.0",
