--- a/package.json
+++ b/package.json
@@ -15,41 +15,44 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@mdi/js": "^7.4.47",
-    "axios": "^1.6.8",
+    "@popperjs/core": "2.11.8",
+    "axios": "^1.7.2",
+    "bootstrap": "5.3.3",
+    "chart.js": "^3.9.1",
+    "core-js": "3.36.0",
+    "dropzone": "6.0.0-beta.2",
+    "echarts": "^5.5.0",
     "pinia": "^2.1.7",
+    "quill": "1.3.7",
     "tailwindcss": "^3.4.3",
     "vue": "^3.4.19",
+    "vue-chartjs": "^4.1.2",
+    "vue-count-to": "1.0.13",
+    "vue-echarts": "^6.7.3",
+    "vue-flatpickr-component": "11.0.4",
     "vue-router": "^4.3.0",
     "vue-sessionstorage": "^1.0.0",
     "vuetify": "^3.5.15",
-    "vuex": "^4.1.0",
-    "@popperjs/core": "2.11.8",
-    "bootstrap": "5.3.3",
-    "chart.js": "4.4.1",
-    "core-js": "3.36.0",
-    "dropzone": "6.0.0-beta.2",
-    "quill": "1.3.7",
-    "vue-count-to": "1.0.13",
-    "vue-flatpickr-component": "11.0.4"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "7.23.10",
     "@mdi/font": "^7.4.47",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "prettier": "^3.0.3",
-    "vite": "^5.1.6",
-    "@babel/eslint-parser": "7.23.10",
     "@vue/cli-plugin-babel": "5.0.8",
     "@vue/cli-plugin-eslint": "5.0.8",
     "@vue/cli-plugin-router": "5.0.8",
     "@vue/cli-service": "5.0.8",
     "@vue/compiler-sfc": "3.4.19",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "eslint": "^8.49.0",
     "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-vue": "^9.17.0",
+    "prettier": "^3.0.3",
     "sass": "1.71.1",
-    "sass-loader": "13.3.2"
+    "sass-loader": "13.3.2",
+    "vite": "^5.1.6"
   }
 }
