--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js": "3.36.0",
     "dropzone": "6.0.0-beta.2",
     "echarts": "^5.5.0",
+    "highcharts": "^11.4.3",
     "pinia": "^2.1.7",
     "quill": "1.3.7",
     "tailwindcss": "^3.4.3",
